--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ displayName = "Star Wars Planets"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/star-wars-planets-ad-astra/"
 logoFile = "swplanets.png"
 authors = "TATHAN"
-credits = "TATHAN"
+credits = "TATHAN, Lost Tapes, Duchy, BossOfTheGym"
 description = '''This Mod is an Addon for Ad Astra!.
 It add planets from Star Wars, Light Sabers and more :)
 '''
