Better Tatooine + New biome

--- a/Common/src/main/resources/data/swplanets/tags/worldgen/biome/starwars_biomes.json
+++ b/Common/src/main/resources/data/swplanets/tags/worldgen/biome/starwars_biomes.json
@@ -3,6 +3,7 @@
     "swplanets:endor_taiga",
     "swplanets:hot_desert",
     "swplanets:mustafar_hill",
-    "swplanets:tatooine_desert"
+    "swplanets:tatooine_desert",
+    "swplanets:tatooine_rocky_desert"
   ]
 }
