--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ subprojects {
         modCompileOnly "me.shedaniel:RoughlyEnoughItems-api:${rootProject.reiVersion}"
         modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin:${rootProject.reiVersion}"
         modCompileOnly "mezz.jei:jei-${minecraftVersion}-common-api:${jeiVersion}"
-        implementation("maven.modrinth:stellaris:${stellarisVersion}-neoforge")
+        modCompileOnly("maven.modrinth:stellaris:${stellarisVersion}-fabric")
     }
 
     java {
